--- a/style.css
+++ b/style.css
@@ -7,6 +7,43 @@
 body {
   height: 100vh;
   margin: 0;
-  overflow: hidden;
   font-family: 'Roboto', sans-serif;
+  background: #f6f6f6;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  height: 100vh;
+  margin: 0;
+}
+
+canvas {
+  border: 2px solid teal;
+}
+
+.toolbox {
+  background-color: teal;
+  border: 1px solid steelblue;
+  display: flex;
+  width: 804px;
+  padding: 1rem;
+}
+
+.toolbox > * {
+  background: #fff;
+  border: 0;
+  display: inline-flex;
+  align-items: center;
+  justify-content: center;
+  font-size: 1.8rem;
+  height: 50px;
+  width: 50px;
+  margin: 0.3rem;
+  padding: 0.3rem;
+  cursor: pointer;
+}
+
+.toolbox > *:last-child {
+  margin-left: auto;
+  width: 190px;
 }
